# CRrust

./: .Cargo.toml.kate-swp  Cargo.toml  crrust.drawio  readme.md
src/: arg  arg.rs  betterArg.rs  command.rs  compile.sh  example.rs  ffmpegTest.rs  hmm.txt  main  main.rs
