[package]
name = "crrust"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
rustc-std-workspace-core = "1.0.0"
hermit-abi = "0.1.8"
libc = "0.2.67"
num_cpus = "1.12.0"
