[package]
name = "crrust"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
# rustc-std-workspace-core = "1.0.0"
ffmpeg-dev = "0.3.8"
# ffmpeg = "0.2.2"